# DroneVision

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker_validation.yml  huggingface_deployment.yml  release.yml
configs/: dev.yaml  phase1.yaml  phase2.yaml
demo/: README.md  app.py  config.py  predictor.py  requirements.txt  ui.py  utils.py
dronevision/: __init__.py
dronevision/data/: __init__.py  augmentation.py  collate.py  converter.py  dataset.py  transforms.py
dronevision/engine/: __init__.py  callbacks.py  evaluator.py  trainer.py
dronevision/inference/: __init__.py  nms.py  predictor.py  visualizer.py
dronevision/loss/: __init__.py  detection_loss.py  iou_loss.py
dronevision/models/: __init__.py  backbone.py  blocks.py  detector.py  head.py  neck.py
dronevision/utils/: __init__.py  anchors.py  bbox.py  config.py  logger.py  reproducibility.py
graph/: architecture_graph.json  code_graph.json  dependency_graph.json
requirements/: base.txt  demo.txt  dev.txt  runtime.txt  testing.txt  training.txt
runs/phase1/: best.pth
scripts/: analyze_dataset.py  convert_voc_to_yolo.py  evaluate.py  generate_graphs.py  generate_knowledge_base.py  generate_project_index.py  infer.py  phase1_dataset_report.py  phase1_pretraining_validation.py  phase5_overfit_test.py  search_project_memory.py  train.py  validate_dataset.py
tests/: conftest.py  test_augmentation.py  test_dataset.py  test_evaluator.py  test_loss.py  test_models.py  test_nms.py
